gccida/c3/set_preference
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2139:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)srca->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2139:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)srca->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2141:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)srca)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2141:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)srca)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2164:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest->fld[0].rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2164:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest->fld[0].rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2166:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2166:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)dest)); 
                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2180:7: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v4 = &allocno_0[( __int64)*( ( int *)reg_allocno + src_regno)]; 
      ^~~~~~~~~
      allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2183:7: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v5 = &allocno_0[( __int64)*( ( int *)reg_allocno + src_regno)]; 
      ^~~~~~~~~
      allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2225:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)dest)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2226:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v27 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)dest)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2234:8: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v11 = &allocno_0[( __int64)*( ( int *)reg_allocno + src_regno)]; 
       ^~~~~~~~~
       allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2246:8: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v12 = &allocno_0[( __int64)*( ( int *)reg_allocno + dest_regno)]; 
       ^~~~~~~~~
       allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2249:8: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v13 = &allocno_0[( __int64)*( ( int *)reg_allocno + dest_regno)]; 
       ^~~~~~~~~
       allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2291:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)srca)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2292:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v23 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)srca)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:2300:8: error: use of undeclared identifier 'allocno_0'; did you mean 'allocno'?
v19 = &allocno_0[( __int64)*( ( int *)reg_allocno + dest_regno)]; 
       ^~~~~~~~~
       allocno
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/global.c:135:24: note: 'allocno' declared here
static struct allocno *allocno;
                       ^
18 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_preference/src/obj/global.o] Error 1
